--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Build and publish to GHCR
-    if: github.repository == 'pagefaultgames/rogueserver'
+    if: github.repository == 'kamionichan/rogueserver'
     env:
       GO_VERSION: 1.22
     runs-on: ubuntu-latest
